crates/data-dict/tests/snapshots/validate_spec__s10_duplicate_column_name.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s10-duplicate-column-name.yaml\")"
---
Error: [S10] Column names must be unique within a table.
    ╭─[ spec/s10-duplicate-column-name.yaml:14:15 ]
    │
 14 │       - name: id
    │               ─┬  
    │                ╰── table `t` has more than one column named `id`
────╯
